# rqt_template_plugin

./: LICENSE  README.md
rqt_template_plugin/: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
rqt_template_plugin/include/rqt_template_plugin/: TemplatePlugin.hpp  TemplateWidget.hpp
rqt_template_plugin/launch/: gui.launch
rqt_template_plugin/resource/: template_widget.ui
rqt_template_plugin/scripts/: rqt_template_plugin
rqt_template_plugin/src/rqt_template_plugin/: TemplatePlugin.cpp  TemplateWidget.cpp
